# rosdyn_examples

./: .gitignore
rosdyn_core_examples/: CMakeLists.txt  package.xml
rosdyn_core_examples/launch/: inverse_dynamics.launch
rosdyn_core_examples/src/: external_wrench_test.cpp  ik.cpp  inverse_dynamics.cpp  wrench_to_external_torques.cpp
universal_robot_dynident/config/: additional_info.yaml  binary_logger.yaml  meto_general_config.yaml
universal_robot_dynident/launch/: test_meto.launch
